--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>Tash</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="dist/bundle.css">
 </head>
 
 <body>
@@ -13,8 +14,8 @@
 +next: Today
 +&lt;unassociated&gt;: misc.
 
-x (A) lorem ipsum +next dolor sit amet +alpha +bravo @foo @bar t:2018-03-18
-lorem ipsum +delta id:E7Z
+x (A) lorem ipsum +next dolor sit amet +alpha @foo @bar t:2018-03-18
+lorem ipsum +alpha id:E7Z
 
 dolor sit amet</pre>
 	</tash-app>
